# MixtureDensityNetwork

./: .gitmodules  CMakeLists.txt  DirTools.cpp  DirTools.h  GaussianMixtureModel.cpp  GaussianMixtureModel.h  MixtureDensityNetwork.cpp  MixtureDensityNetwork.h  README.md  data_sin.txt  data_sin_inv.txt  example_mdn.cpp  example_nn.cpp
